# dans_typesetting

./: .clang-format  .clang-tidy  .clangd  .gitattributes  .gitignore  CMakeLists.txt  _build_common.sh  dbg.sh  dev.sh  run_opt.sh  watcher.sh
app/: main.cpp  publish.cpp
assets/: sample-image.tex  sample-python-plot.py
builder/: README.md  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
builder/scripts/: browser-smoke.mjs  render_python_plot.py
builder/src/: main.tsx  styles.css
builder/src/app/: App.tsx  BlockPalette.tsx  BlockRadialMenu.tsx  DetachConfirmation.tsx  DocumentBuilder.tsx  DocumentPage.tsx  DragGhost.tsx  EditorDialog.tsx  NvimBlockEditor.tsx  PresentationView.tsx  blockNavigation.test.ts  blockNavigation.ts  deletedBlockCache.test.ts  deletedBlockCache.ts
builder/src/builder/: copyBlock.test.ts  copyBlock.ts  copyInline.ts  documentResources.test.ts  documentResources.ts  inlinePlugin.ts  layout.test.ts  layout.ts  numbered.ts  numbering.test.ts  numbering.ts  plugin.ts  reference.ts  referenceEditing.ts  referenceTargets.test.ts  referenceTargets.ts  sourceEditing.test.ts  sourceEditing.ts
builder/src/canvas/: pageAnchor.ts  viewportGestures.test.ts  viewportGestures.ts
builder/src/editor/: nvimProtocol.test.ts  nvimProtocol.ts
builder/src/math/: editorExtension.ts  inputParser.ts
builder/src/model/: document.test.ts  document.ts  documentInline.test.ts  inlineSequence.test.ts  inlineSequence.ts  math.test.ts  math.ts  referenceId.ts
builder/src/plugins/: basicMathInputParser.test.ts  basicMathInputParser.ts  bibliography.test.ts  bibliography.ts  bibliographyModel.ts  bibliographySources.test.ts  bibliographySources.ts  bibliographyTransport.ts  bibliographyView.tsx  captioned.test.ts  captioned.tsx  captionedEditor.tsx  captionedModel.ts  captionedTransport.ts  codeHighlighting.test.ts  codeHighlighting.ts  codeListing.test.ts  codeListing.ts  codeListingEditing.test.ts  codeListingEditing.ts  codeListingModel.ts  codeListingSupport.ts  codeListingTransport.test.ts  codeListingTransport.ts  codeListingView.tsx  colorSpan.ts  colorSpanModel.ts  colorSpanTransport.ts  colorSpanView.tsx  contentImage.test.ts  contentImage.tsx  contentImageEditor.tsx  contentImageModel.ts  contentImageTransport.ts  documentShell.test.ts  documentShell.tsx  documentShellEditors.tsx  documentShellTransport.ts  drawing.tsx  drawingEditor.tsx  (+104 more)
builder/src/server/: nvimServer.ts  pythonPlotServer.test.ts  pythonPlotServer.ts
builder/src/transport/: documentTransport.test.ts  documentTransport.ts  projectTransport.ts
docs/: architecture.md  bibliography.md  canonical-transport.md  canvas-migration.md  captioned.md  code-listings.md  composite-figures.md  continuation.md  grid.md  inline-code.md  inline-sequences.md  jupyter-writer.md  latex-like-pdf.md  latex-math.md  markdown-writer.md  math-annotations.md  math-display-groups.md  math-identifiers-and-functions.md  math-matvec.md  math-numeric-literals.md  math-structures.md  math-vocabulary.md  nested-block-sequences.md  padding.md  python-plots.md  rich-captions.md  slide-development-writer.md  thesis-next-slices.md  thesis-parity.md
fixtures/canonical/: current-features.dans.json  current-features.dans_doc  latex-like-text.dans_doc
src/: common.hpp  document.cpp  document.hpp  reference_id.cpp  reference_id.hpp
src/connectors/: tex_math_expression.cpp  tex_math_expression.hpp
src/connectors/latex/: bibliography.cpp  bibliography.hpp  captioned.cpp  captioned.hpp  code_listing.cpp  code_listing.hpp  color_span.cpp  color_span.hpp  core_paragraph.cpp  core_paragraph.hpp  document_shell.cpp  document_shell.hpp  excalidraw_drawing.cpp  excalidraw_drawing.hpp  figure_pair.cpp  figure_pair.hpp  footnote.cpp  footnote.hpp  graphics.hpp  grid.cpp  grid.hpp  hyperlink.cpp  hyperlink.hpp  image.cpp  image.hpp  inline_code.cpp  inline_code.hpp  inline_sequence.cpp  inline_sequence.hpp  item_list.cpp  item_list.hpp  latex_math.cpp  latex_math.hpp  latex_mixin.cpp  latex_mixin.hpp  math.cpp  math.hpp  padding.cpp  padding.hpp  paragraph.cpp  (+7 more)
src/connectors/latex_like/: paragraph.cpp  paragraph.hpp
src/connectors/markdown/: bibliography.cpp  bibliography.hpp  captioned.cpp  captioned.hpp  code_listing.cpp  code_listing.hpp  color_span.cpp  color_span.hpp  core_paragraph.cpp  figure_pair.cpp  (+32 more)
src/fonts/: type1_font.cpp  type1_font.hpp
src/layout/: latex_like_engine.cpp  latex_like_engine.hpp  page_layout.hpp
src/plugins/: bibliography.cpp  bibliography.hpp  bibliography_bibtex.cpp  bibliography_bibtex.hpp  bibliography_json.cpp  bibliography_json.hpp  captioned.cpp  captioned.hpp  code_listing.cpp  code_listing.hpp  color_span.cpp  color_span.hpp  core_paragraph.cpp  core_paragraph.hpp  document_shell.cpp  document_shell.hpp  excalidraw_drawing.cpp  excalidraw_drawing.hpp  figure_pair.cpp  figure_pair.hpp  footnote.cpp  footnote.hpp  grid.cpp  grid.hpp  hyperlink.cpp  hyperlink.hpp  image.cpp  image.hpp  inline_code.cpp  inline_code.hpp  inline_sequence.cpp  inline_sequence.hpp  item_list.cpp  item_list.hpp  latex_math.cpp  latex_math.hpp  latex_mixin.cpp  latex_mixin.hpp  math.cpp  math.hpp  (+18 more)
src/transport/: document_materializer.cpp  document_materializer.hpp  document_transport.cpp  document_transport.hpp  json.cpp  json.hpp
src/writers/: jupyter_writer.cpp  jupyter_writer.hpp  latex_like_pdf_writer.cpp  latex_like_pdf_writer.hpp  latex_writer.cpp  latex_writer.hpp  markdown_writer.cpp  markdown_writer.hpp
tests/: native_bibliography_test.cpp  native_captioned_python_plot_test.cpp  native_code_listing_test.cpp  native_document_materializer_test.cpp  native_document_shell_test.cpp  native_excalidraw_drawing_test.cpp  native_figure_pair_test.cpp  native_grid_test.cpp  native_inline_test.cpp  native_item_list_test.cpp  native_jupyter_test.cpp  native_latex_like_pdf_test.cpp  native_latex_math_test.cpp  native_markdown_test.cpp  native_math_matvec_test.cpp  native_math_structures_test.cpp  native_padding_test.cpp  native_table_test.cpp  native_transport_test.cpp
(+2 files in other folders)
